@@ -11,9 +11,9 @@ export LOCAL_CASSANDRA_CONTACT_POINT="127.0.0.1"
 # OPTIONAL (default if omitted):
 # export LOCAL_CASSANDRA_PORT="9042"
 
-# OPTIONAL: (if defined here, they will be created as needed)
-export LOCAL_DATA_API_KEYSPACE="default_keyspace"
-export LOCAL_DATA_API_SECONDARY_KEYSPACE="alternate_keyspace"
+# OPTIONAL. Default keyspace names if omitted. Keyspaces are created if needed.
+# export LOCAL_DATA_API_KEYSPACE="..."
+# export LOCAL_DATA_API_SECONDARY_KEYSPACE="..."
 
 # RERANKER SETTINGS
 export ASTRAPY_FINDANDRERANK_USE_RERANKER_HEADER="y"
